--- a/styles/style.css
+++ b/styles/style.css
@@ -1,21 +1,19 @@
 
 
 h1 { 
-	margin-top: 3em;
+	margin-top: 2em;
 	text-align: center; 
 }
 
 section {
-	width: 80%;
-	margin: 2em auto; 
+	padding: 0em 1em 1.5em 1em; 
 }
 /* make the form a little presentable  by adding a bordering and center the form and the elements inside it */
 form#insertInfo { 
 	border: 2px solid gray; 
 	width: 14em; 
 	margin: 0em auto;  
-	overflow: hidden; 
-	padding: 0em 2em; 
+	padding: 0em 1.5em 1.5em 1.5em; 
 }
 
 /* place paragraphs and input text vertically closer while distancing the input button from the rest vertically */
@@ -26,21 +24,22 @@ form#insertInfo  input[type="text"] {
 	margin-top: 0em; 
 }
 
+textarea  {
+	max-height: 4.5em;
+	max-width: 13em; 
+	margin-bottom: 1em; 
+}
+
 /* shape and position the submit button */
 form#insertInfo input[type="submit"] { 
-	margin-top: 2em; 
-	margin-bottom: 2em; 
-	float: right; 
+	margin: 0em 3em; 
 	width: 7em;
     height: 7em;
     border-radius: 100%;
     border: none;
 }
 
-textarea  {
-	max-height: 4.5em;
-	max-width: 13em; 
-}
+
 
 
 input[type="submit"]:hover, 
